# ferrotype

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ferro-type-import/: Cargo.toml
crates/ferro-type-import/src/: codegen.rs  converter.rs  lib.rs  parser.rs
crates/ferrotype/: Cargo.toml  README.md
crates/ferrotype-derive/: Cargo.toml  README.md
crates/ferrotype-derive/src/: lib.rs
crates/ferrotype-fixtures/: Cargo.toml
crates/ferrotype-fixtures/src/: lib.rs
crates/ferrotype-gen/: Cargo.toml  README.md
crates/ferrotype-gen/src/: lib.rs
crates/ferrotype-test-server/: Cargo.toml
crates/ferrotype-test-server/src/: main.rs
crates/ferrotype/src/: lib.rs
crates/ferrotype/tests/: codegen_snapshots.rs  compile_fail_tests.rs  derive_enum.rs  derive_struct.rs  rpc_method.rs
crates/ferrotype/tests/compile_fail/: empty_enum.rs  empty_enum.stderr  indexed_access_invalid_field.rs  indexed_access_invalid_field.stderr  rpc_missing_params.rs  rpc_missing_params.stderr  rpc_missing_return.rs  rpc_missing_return.stderr  rpc_missing_self.rs  rpc_missing_self.stderr  rpc_tuple_pattern_param.rs  rpc_tuple_pattern_param.stderr  rpc_unknown_attr.rs  rpc_unknown_attr.stderr  union_not_supported.rs  union_not_supported.stderr
crates/ferrotype/tests/snapshots/: codegen_snapshots__bool_type.snap  codegen_snapshots__deeply_nested.snap  codegen_snapshots__f32_type.snap  codegen_snapshots__f64_type.snap  codegen_snapshots__i32_type.snap  codegen_snapshots__i64_type.snap  codegen_snapshots__nested_result_option.snap  codegen_snapshots__nested_vec_tuple.snap  codegen_snapshots__option_bool.snap  codegen_snapshots__option_i32.snap  codegen_snapshots__option_string.snap  codegen_snapshots__option_vec_string.snap  codegen_snapshots__result_i32_string.snap  codegen_snapshots__result_string_string.snap  codegen_snapshots__result_vec_string.snap  codegen_snapshots__str_type.snap  codegen_snapshots__string_type.snap  codegen_snapshots__tuple1_string.snap  codegen_snapshots__tuple2_string_i32.snap  codegen_snapshots__tuple3_string_i32_bool.snap  codegen_snapshots__type_names.snap  codegen_snapshots__u32_type.snap  codegen_snapshots__u64_type.snap  codegen_snapshots__unit_type.snap  codegen_snapshots__usize_type.snap  codegen_snapshots__vec_bool.snap  codegen_snapshots__vec_i32.snap  codegen_snapshots__vec_option_i32.snap  codegen_snapshots__vec_string.snap  derive_enum__adjacent_struct_variant.snap  derive_enum__adjacent_tagged_enum.snap  derive_enum__custom_tag_enum.snap  derive_enum__derive_generic_enum_i32.snap  derive_enum__derive_generic_enum_string.snap  derive_enum__derive_mixed_enum.snap  derive_enum__derive_struct_enum.snap  derive_enum__derive_tuple_enum.snap  derive_enum__derive_unit_enum.snap  derive_enum__untagged_mixed.snap  derive_enum__untagged_value.snap
docs/: advanced-typescript-patterns-research.md  ferro-type-gen-design.md  ts-parser-research.md
docs/research/: facet-integration.md
examples/hello-world/: Cargo.toml
examples/hello-world/client/: package-lock.json  package.json  tsconfig.json
examples/hello-world/client/src/: index.ts
examples/hello-world/client/tests/: hello.test.ts
examples/hello-world/src/: main.rs
scripts/: bump.sh  publish.sh
