[package]
name = "ferro-type-import"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "TypeScript-to-Rust type code generation"
repository = "https://github.com/iamnbutler/ferrotype"
keywords = ["typescript", "codegen", "rust", "types"]
categories = ["development-tools", "encoding"]

[dependencies]
ferro-type = { version = "0.2.0", path = "../ferrotype" }
swc_core = { version = "54", features = ["ecma_parser", "ecma_ast", "common"] }
convert_case = "0.6"

[dev-dependencies]
insta = "1.41"
