[package]
name = "ferrotype-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Derive macros for ferrotype TypeScript type generation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
