[package]
name = "ferro-type-gen"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "TypeScript file generation for ferro-type"
repository = "https://github.com/iamnbutler/ferrotype"
documentation = "https://docs.rs/ferro-type-gen"
readme = "../../README.md"
keywords = ["typescript", "codegen", "generator", "ferro-type"]
categories = ["development-tools", "encoding"]

[dependencies]
ferro-type = { version = "0.2.0", path = "../ferrotype" }

[dev-dependencies]
tempfile = "3"
