[package]
name = "ferro-type"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust-to-TypeScript type code generation with serde compatibility"
repository = "https://github.com/iamnbutler/ferrotype"
documentation = "https://docs.rs/ferro-type"
readme = "../../README.md"
keywords = ["typescript", "codegen", "derive", "serde"]
categories = ["development-tools", "encoding"]

[dependencies]
ferro-type-derive = { version = "0.1.0", path = "../ferrotype-derive" }

[dev-dependencies]
insta = "1.41"
trybuild = "1.0"
