[package]
name = "hello-world"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Simplest ferrotype RPC example - no args, returns string"

[[bin]]
name = "hello-server"
path = "src/main.rs"

[dependencies]
ferrotype = { path = "../../crates/ferrotype" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
